fix build break under JDK1.6